# tf2jax

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  setup.py  test.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: bump-version.yaml  ci.yml  docs.yml  publish-package.yaml  pypi-publish.yml  tag-version.yaml
docs/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.md  requirements.txt
tf2jax/: __init__.py  tf2jax_test.py
tf2jax/_src/: config.py  jax_utils.py  linalg_ops_test.py  numpy_compat.py  numpy_compat_test.py  ops.py  ops_test.py  roundtrip_test.py  sharding_test.py  test_util.py  tf2jax.py  tf2jax_test.py  utils.py  xla_utils.py
tf2jax/_src/experimental/: mhlo.py  mhlo_test.py  ops.py  util.py
tf2jax/experimental/: mhlo.py  mhlo_test.py  ops.py
tf2jax/test_data/custom_gradient_cubed/: fingerprint.pb  saved_model.pb
tf2jax/test_data/no_shardy/: fingerprint.pb  saved_model.pb
wiki/: SCHEMA.md  index.md  log.md  overview.md
wiki/concepts/: conversion-phases.md  custom-gradients.md  graph-evaluation.md  jax2tf-roundtrip.md  library-functions.md  numpy-compat.md  op-registry.md  variable-semantics.md
wiki/design/: lazy-custom-gradients.md  refactoring-recommendations.md
wiki/entities/: Variable.md  _GraphDef.md  _HigherOrderFunction.md  _LibraryFunction.md  _OpNode.md  _Subgraph.md  _TensorEdge.md  convert-api.md  jax2tf-heuristics.md
(+2 files in other folders)
